--- a/tests/2014_final.tex
+++ b/tests/2014_final.tex
@@ -487,7 +487,7 @@ $.
 
 \element{exam_15}{ % в фигурных скобках название группы вопросов
   \begin{questionmult}{q25} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
-У пяти случайно выбранных студентов первого потока результаты за контрольную по статистике оказались равны  82, 47, 20, 43 и 73. У четырёх случайно выбранных студентов второго потока — 68, 83, 60 и 52. Вычислите статистику Вилкоксона и проверьте гипотезу $H_0$ об однородности результатов студентов двух потоков. Критические значения статистики Вилкоксона равны $T_L=12$ и $T_R=28$.
+У пяти случайно выбранных студентов первого потока результаты за контрольную по статистике оказались равны  82, 47, 20, 43 и 73. У четырёх случайно выбранных студентов второго потока — 68, 83, 60 и 52. Вычислите статистику Вилкоксона для меньшей выборки и проверьте гипотезу $H_0$ об однородности результатов  двух потоков. Критические значения статистики Вилкоксона равны $T_L=12$ и $T_R=28$.
 \begin{multicols}{3} % располагаем ответы в {k} колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \wrongchoice{20, $H_0$ не отвергается}
