--- a/probability_hse_exams.Rnw
+++ b/probability_hse_exams.Rnw
@@ -126,6 +126,24 @@ options(scipen = 10)
 \end{enumerate}
 
 
+\section{Доброе напутствие пишущим эту подборку :)}
+
+Здесь перечислены стилевые особенности коллекции, а узнать технические подробности по теху можно, например, \href{http://www.ccas.ru/voron/download/voron05latex.pdf}{в учебнике} К.В. Воронцова.
+
+\begin{enumerate}
+
+\item Дробную часть числа отделяй от целой точкой: $3.14$ — хорошо, $3{,}14$ — плохо.
+\item Существует длинное тире, —, которое отличается от просто дефиса - и нужно, чтобы разделять части предложения. \href{https://ru.wikihow.com/напечатать-тире}{Инструкция в картинках по набору тире :)}
+\item Выключные формулы следует окружать \verb|\[|\ldots\verb|\]|. Никаких \$\$\ldots\$\$!
+\item Про остальные окружения: для системы уравнений подойдёт cases, для формул на несколько строк – multline*, для нумерации – enumerate.
+\item Русский текст внутри формулы нужно писать в \verb|\text{|\ldots\}.
+\item Для многоточий существует команда \verb|\ldots|.
+\item В преамбуле определены сокращения! Самые популярные: \verb|\P, \E, \Var, \Cov, \Corr, \cN|.
+\item Названия функций тоже идут со слэшем: \verb|\ln, \exp, \cos|\ldots
+\item Таблицы нужно оформлять по стандарту booktabs. Самый удобный способ сделать это – зайти на
+\href{https://www.tablesgenerator.com}{tablesgenerator} и выбрать там опцию booktabs table style вместо default table style.
+\item Уважай букву ё – ставь над ней точки! :)
+\end{enumerate}
 
 
 \section{2004-2005}
