--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -161,6 +161,24 @@
 \end{enumerate}
 
 
+\section{Доброе напутствие пишущим эту подборку :)}
+
+Здесь перечислены стилевые особенности коллекции, а узнать технические подробности по теху можно, например, \href{http://www.ccas.ru/voron/download/voron05latex.pdf}{в учебнике} К.В. Воронцова.
+
+\begin{enumerate}
+
+\item Дробную часть числа отделяй от целой точкой: $3.14$ — хорошо, $3{,}14$ — плохо.
+\item Существует длинное тире, —, которое отличается от просто дефиса - и нужно, чтобы разделять части предложения. \href{https://ru.wikihow.com/напечатать-тире}{Инструкция в картинках по набору тире :)}
+\item Выключные формулы следует окружать \verb|\[|\ldots\verb|\]|. Никаких \$\$\ldots\$\$!
+\item Про остальные окружения: для системы уравнений подойдёт cases, для формул на несколько строк – multline*, для нумерации – enumerate.
+\item Русский текст внутри формулы нужно писать в \verb|\text{|\ldots\}.
+\item Для многоточий существует команда \verb|\ldots|.
+\item В преамбуле определены сокращения! Самые популярные: \verb|\P, \E, \Var, \Cov, \Corr, \cN|.
+\item Названия функций тоже идут со слэшем: \verb|\ln, \exp, \cos|\ldots
+\item Таблицы нужно оформлять по стандарту booktabs. Самый удобный способ сделать это – зайти на
+\href{https://www.tablesgenerator.com}{tablesgenerator} и выбрать там опцию booktabs table style вместо default table style.
+\item Уважай букву ё – ставь над ней точки! :)
+\end{enumerate}
 
 
 \section{2004-2005}
@@ -436,7 +454,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/empirical\_cdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/empirical_cdf-1}
+\includegraphics[width=\maxwidth]{figure/empirical_cdf-1} 
 
 
 \begin{figure}
@@ -548,11 +566,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.7,6.2)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.1,6.4)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.3)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.3)$
-\item $\E(X/(X+4Y))$
+\item $\P(X+Y>5.1)$
+\item $\E(X/(X+7Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -827,15 +845,15 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Wed Oct 25 14:40:47 2017
+% Fri Oct 27 09:55:16 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
   \hline
- & 1 класс & 2 класс & 3 класс \\
+ & 1 класс & 2 класс & 3 класс \\ 
   \hline
-Погиб & 122 & 167 & 528 \\
-  Выжил & 203 & 118 & 178 \\
+Погиб & 122 & 167 & 528 \\ 
+  Выжил & 203 & 118 & 178 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -1664,7 +1682,7 @@ f(x) = F'(x) = \frac{e^x}{(1+e^x)^2}
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/logis\_pdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/logis_pdf-1}
+\includegraphics[width=\maxwidth]{figure/logis_pdf-1} 
 
 
 \begin{figure}
