--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -523,7 +523,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
 
 
 \begin{enumerate}
-\item Самолёт упал либо в горах, либо на равнине. Вероятность того, что самолёт упал в горах, равна 0{,}75. Для поиска пропавшего самолёта выделено 3 вертолёта. Каждый вертолёт можно использовать только в одном месте. Как распределить имеющиеся вертолёты, если вероятность обнаружения пропавшего самолёта отдельно взятым вертолётом равна $0,6$?
+\item Самолёт упал либо в горах, либо на равнине. Вероятность того, что самолёт упал в горах, равна 0.75. Для поиска пропавшего самолёта выделено 3 вертолёта. Каждый вертолёт можно использовать только в одном месте. Как распределить имеющиеся вертолёты, если вероятность обнаружения пропавшего самолёта отдельно взятым вертолётом равна $0.6$?
 
 \item Совместная функция плотности величин $X$ и $Y$ имеет вид
 \[
@@ -566,10 +566,10 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.1,6.4)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.3)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.5,6.3)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.1)$
+\item $\P(X+Y>5.2)$
 \item $\E(X/(X+7Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
@@ -731,7 +731,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 {$X$ и $Y$ независимы} \\ \\
 
 %16
-\item $Z_1,Z_2,\ldots,Z_n\sim\N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
+\item $Z_1,Z_2,\ldots,Z_n\sim\cN(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
 
 \otvet {$\cN(0,1)$}{$t_n$}{$F_{1,n-2}$}{$\chi^2_n$}{$t_{n-2}$}
 
@@ -746,7 +746,8 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \otvet{$F_{k,n}$}{$F_{n,k}$}{$F_{k-1,n-1}$}{$\chi^2_{n-k}$}{$F_{n-1,k-1}$}
 
 %19
-\item \emph{Смещенной} оценкой математического ожидания по выборке независимых, одинаково распределенных случайных величин $X_1$, $X_2$, $X_3$ является оценка
+\item \emph{Смещённой} оценкой математического ожидания по выборке независимых,
+одинаково распределенных случайных величин $X_1$, $X_2$, $X_3$ является оценка
 
 \lotvet{$(X_1+X_2)/2$}{$(X_1+X_2+X_3)/3$}{$0.7X_1+0.2X_2+0.1X_3$}{$0.3X_1+0.3X_2+0.3X_3$}{$X_1+X_2-X_3$} \\ \\
 
@@ -756,9 +757,9 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \otvet{0}{0.5}{1}{1.5}{не существует}
 
 %21
-\item Если $X_i$ независимы и имеют нормальное распределение $N(-1;2013)$, то $\sqrt{n}(1+\bar{X})/\hat{\sigma}$ имеет распределение
+\item Если $X_i$ независимы и имеют нормальное распределение $\cN(-1;2013)$, то $\sqrt{n}(1+\bar{X})/\hat{\sigma}$ имеет распределение
 
-\otvet{$\cN(0;1)$}{$t_{n-1}$}{$\chi^2_{n-1}$}{$N(0;2013/n)$}{$t_n$}
+\otvet{$\cN(0;1)$}{$t_{n-1}$}{$\chi^2_{n-1}$}{$\cN(0;2013/n)$}{$t_n$}
 
 %22
 \item Последовательность оценок $\hat{\theta}_1$, $\hat{\theta}_2$, \ldots называется состоятельной, если
@@ -845,7 +846,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Fri Oct 27 09:55:16 2017
+% Fri Oct 27 10:37:29 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -1067,7 +1068,7 @@ $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
 \]
 Значит
 \[
-\E(X) = \E\left()\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\E(X_i)  = \frac{400}{500} = 0.8
+\E(X) = \E\left(\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\E(X_i)  = \frac{400}{500} = 0.8
 \]
 
 \[
@@ -1594,7 +1595,6 @@ $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
 \includegraphics[width=6cm]{images/13}
 \end{center}
 \end{enumerate}
-\newpage
 
 \item
 Пусть $A = \{\text{«Лекция полезна»}\}$, $B = \{\text{«Лекция интересна»}\}$. Заметим, что лекции вообще независимы друг от друга.
