--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -566,11 +566,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.5,6.2)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.5)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.6,6.8)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.9)$
-\item $\E(X/(X+4Y))$
+\item $\P(X+Y>5.8)$
+\item $\E(X/(X+2Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -846,7 +846,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Fri Oct 27 23:01:36 2017
+% Sat Oct 28 16:22:08 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -1748,7 +1748,6 @@ $\begin{cases} \E_2 = \frac{1}{6} \cdot 1 +  \frac{5}{6} (\E_1 + 1)   \\ \E_1 = 
 
 Решив эту систему, получим, что $\E_1 = 42$. А ведь это и есть $\E(N)$.
 
-
 Аналогична логика для оставшихся мат. ожиданий.
 
 Найдем математическое ожидание суммы набранных очков. Ясно, что если выпадает «не 6», то мы ждем 3 очка. Тогда переопределив $\E_1$ и $\E_2$ следующим образом: пусть $\E_1$ — число набранных очков, которое мы ожидаем получить за игру, если игра начинается в состоянии 1, $\E_2$ — число набранных очков, которое мы ожидаем получить за игру, если игра начинается в состоянии 2.
@@ -1816,14 +1815,25 @@ $\P(\cdot)$ & $1/3$ & $2/3$ \\ \bottomrule
 \item
 Биномиальное распределение — \textit{À l’abordage!}.
 
-Задача интерпретируется так: последний ход — это когда мы обратились к коробку, в котором нет спичек (т.е. к одному коробку нужно обратиться $n+1$ раз).
+Задача интерпретируется так: последний ход — это когда мы обратились к коробку, в котором нет спичек (то есть к одному коробку нужно обратиться $n+1$ раз).
 
 \begin{enumerate}
-\item Если $0<k \leqslant n$, будем считать успехом — попадание в коробок, к которому мы на последнем ходу игры (пустому коробку) обратились. До этого момента из негомбыло вытащено $n$ спичек, а из другого $2n-k$ спичек, т.е. всего в игре было $2n - k + 1$ шагов. Успехов — $n + 1$ (вытащено $n$ спичек, и на последнем ходу мы к нему обратились). По формуле Бернулли получаем следующее ($X$ — случайная величина, показывающая сколько спичек осталось в коробке, к которому мы не обратились на последнем ходу игры):
-\[\P(X = k) = C^{n+1}_{2n-k+1} \left(\frac{1}{2} \right)^{2n-k+1}\]
+\item Пусть $\xi$ — это случайная величина, обозначающая число оставшихся спичек в непустом коробке перед последним ходом.
 
-Если $k = 0$, то мы вытащили все спички из обоих коробков к последнему ходу, и нам без разницы к какому коробку мы обратимся на последнем шагу, т.е.:
-\[\P(X = 0) =2 C^{n+1}_{2n+1} \left(\frac{1}{2} \right)^{2n+1}\]
+Если $0<k \leqslant n$, будем считать успехом — попадание в коробок, к которому мы на последнем ходу игры (пустому коробку) обратились. До этого момента из него было вытащено $n$ спичек, а из другого $n-k$ спичек, то есть спички брались $2n - k$ раз.
+Таким образом, перед последним ходом произошло $n$ успехов и $n-k$ неудач.
+\[
+\P(\xi = k) = C_{2n-k}^{n-k} = \left(\frac{1}{2}\right)^{n-k} \left(\frac{1}{2}\right)^{n} = C_{2n-k}^{n-k} \left(\frac{1}{2}\right)^{2n-k}
+\]
+Теперь нужно учесть, что на последнем ходе был выбран именно пустой коробок. Вероятность этого события — $1/2$, значит, искомая вероятность равна:
+\[
+\P(\text{в одном коробке осталось k спичек}) =  C_{2n-k}^{n-k} \left(\frac{1}{2}\right)^{2n-k} \cdot \frac{1}{2} = C_{2n-k}^{n-k} \left(\frac{1}{2}\right)^{2n-k+1}
+\]
+%Успехов — $n + 1$ (вытащено $n$ спичек, и на последнем ходу мы к нему обратились). По формуле Бернулли получаем следующее ($X$ — случайная величина, показывающая сколько спичек осталось в коробке, к которому мы не обратились на последнем ходу игры):
+%\[\P(X = k) = C^{n+1}_{2n-k+1} \left(\frac{1}{2} \right)^{2n-k+1}\]
+
+%Если $k = 0$, то мы вытащили все спички из обоих коробков к последнему ходу, и нам без разницы к какому коробку мы обратимся на последнем шагу, т.е.:
+%\[\P(X = 0) =2 C^{n+1}_{2n+1} \left(\frac{1}{2} \right)^{2n+1}\]
 
 \item Среднее спичек в другом коробке:
 
