--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -566,10 +566,10 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.6,6.8)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.5,6.6)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.4)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.8)$
+\item $\P(X+Y>5.5)$
 \item $\E(X/(X+2Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
@@ -846,7 +846,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Sat Oct 28 16:22:08 2017
+% Sat Oct 28 20:27:11 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -1837,7 +1837,7 @@ $\P(\cdot)$ & $1/3$ & $2/3$ \\ \bottomrule
 
 \item Среднее спичек в другом коробке:
 
-\[\E(X) = \sum \limits_{k=1}^{n} k \cdot C^{n+1}_{2n-k+1} \left(\frac{1}{2} \right)^{2n-k+1}\]
+\[\E(X) = \sum \limits_{k=1}^{n} k \cdot C^{n-k}_{2n-k} \left(\frac{1}{2} \right)^{2n-k+1}\]
 
 
 \end{enumerate}
