--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -259,7 +259,7 @@
 
 \item Совместное распределение случайных величин $X$ и $Y$ задано таблицей
 
-\begin{tabular}{@{}c|ccc@{}}
+\begin{tabular}{@{}cccc@{}}
 \toprule
       & $X=-2$ & $X=0$ & $X=2$ \\ \midrule
 $Y=1$ & $0.2$  & $0.3$ & $0.1$ \\
@@ -559,11 +559,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.4,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.7)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.3,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.8)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.6)$
-\item $\E(X/(X+8Y))$
+\item $\P(X+Y>5.2)$
+\item $\E(X/(X+9Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -622,8 +622,8 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 
 \begin{tabular}{@{}cccc@{}}
 \toprule
-$X$         & $-1$  & $0$   & $1$ \\ \midrule
-$\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
+$x$         & $-1$  & $0$   & $1$ \\ \midrule
+$\P(X=x)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 \end{tabular}
 
 Дисперсия величины $X$, $\Var(X)$, равняется
@@ -838,8 +838,8 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
-% latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Sun Oct 29 14:39:52 2017
+% latex table generated in R 3.4.2 by xtable 1.8-2 package
+% Fri Nov  3 23:50:31 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -1024,7 +1024,7 @@ f(y) =
 \begin{enumerate}
 \item[$\alpha$)] Совместное распределение имеет вид:
 \begin{center}
-\begin{tabular}{@{}l|llllll@{}}
+\begin{tabular}{@{}lllllll@{}}
 \toprule
 $\eta$ $\backslash$ $\xi$ & $1$                            & $2$                            & $3$                            & $4$                            & $5$                            & $6$                            \\ \midrule
 $1$           & $\frac{2}{15}\cdot\frac{1}{6}$ & $\frac{2}{15}\cdot\frac{1}{6}\mbox{*}$  & $\frac{2}{15}\cdot\frac{1}{6}\mbox{*}$   & $\frac{2}{15}\cdot\frac{1}{6} \mbox{*}$   & $\frac{2}{15}\cdot\frac{1}{6} \mbox{*}$   & $\frac{1}{3}\cdot\frac{1}{6} \mbox{*}$   \\
@@ -1042,7 +1042,7 @@ $6$           & $\frac{2}{15}\cdot\frac{1}{6}$ & $\frac{2}{15}\cdot\frac{1}{6}$ 
 
 Выпишем таблицу распределения случайной величины $\zeta$:
 
-\begin{tabular}{@{}l|cccccc@{}}
+\begin{tabular}{@{}lcccccc@{}}
 \toprule
 $\zeta$     & $1$                              & $2$                                      & $3$                                      & $4$                                      & $5$                                      & $6$                                                                              \\ \midrule
 $\P(\cdot)$ & $\frac{2}{15} \cdot \frac{1}{6}$ & $\frac{2}{15} \cdot \frac{1}{6} \cdot 3$ & $\frac{2}{15} \cdot \frac{1}{6} \cdot 5$ & $\frac{2}{15} \cdot \frac{1}{6} \cdot 7$ & $\frac{2}{15} \cdot \frac{1}{6} \cdot 9$ & $\frac{1}{3} \cdot \frac{1}{6} \cdot 6 + \frac{2}{15} \cdot \frac{1}{6} \cdot 5$ \\ \bottomrule
