--- a/materials/min_kr2/main.tex
+++ b/materials/min_kr2/main.tex
@@ -88,7 +88,7 @@
 \def \hVar{\widehat{\Var}}
 \def \hCorr{\widehat{\Corr}}
 \def \hCov{\widehat{\Cov}}
-\def \cN{\mathcal{N}} 
+\def \cN{\mathcal{N}}
 \def \P{\mathbb{P}}
 
 
@@ -97,12 +97,12 @@
 
 \begin{enumerate}
 
-\item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$. 
+\item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
 \begin{center}\begin{tabular}{r|rrr}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
-$-1$                 & $0.2$ & $0.1$ & $0.2$ \\ 
+$-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.1$ & $0.3$ & $0.1$ \\ \bottomrule
 \end{tabular}\end{center}
 
@@ -119,26 +119,26 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \item Постройте график функции $F_{X}(x)$ распределения случайной величины $X$.
 \end{enumerate}
 
-\item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$. 
+\item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
 
 \begin{center}\begin{tabular}{l|rrr}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$  & $1$   \\ \midrule
-$-1$                 & $0.2$ & $0.1$ & $0.2$ \\ 
+$-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.2$ & $0.1$ & $0.2$ \\ \bottomrule
 \end{tabular}\end{center}
 
 Найдите
 \begin{enumerate}
-\item $\P(X = 1)$,  
-\item $\P(\{Y = 1\})$,  
-\item $\P(\{X = 1\}\cap\{Y = 1\})$  
-\item Являются ли случайные величины $X$ и $Y$ независимыми?  
-\item $F_{X,Y}$(1,0)  
+\item $\P(X = 1)$,
+\item $\P(\{Y = 1\})$,
+\item $\P(\{X = 1\}\cap\{Y = 1\})$
+\item Являются ли случайные величины $X$ и $Y$ независимыми?
+\item $F_{X,Y}$(1,0)
 \item Таблицу распределения случайной величины $Y$
 \item Функцию $F_{Y}(y)$ распределения случайной величины $Y$
-\item Постройте график функции $F_{Y}(y)$ распределения случайной величины $Y$.  
+\item Постройте график функции $F_{Y}(y)$ распределения случайной величины $Y$.
 \end{enumerate}
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
@@ -150,18 +150,18 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.1$ & $0.3$ & $0.1$ \\ \bottomrule
 \end{tabular}\end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-    \item $\E(X),$  
-    \item $\E(X^{2}),$  
-	\item $D(X),$  
-    \item $\E(Y),$  
-    \item $\E(Y^{2}),$  
-    \item $D(Y),$  
-    \item $\E(XY),$  
-	\item $\Cov(X,Y)$  
-    \item $\Corr(X,Y)$  
-    \item Являются ли случайные величины $X$ и $Y$ некоррелированными?  
+    \item $\E(X),$
+    \item $\E(X^{2}),$
+	\item $\Var(X),$
+    \item $\E(Y),$
+    \item $\E(Y^{2}),$
+    \item $\Var(Y),$
+    \item $\E(XY),$
+	\item $\Cov(X,Y)$
+    \item $\Corr(X,Y)$
+    \item Являются ли случайные величины $X$ и $Y$ некоррелированными?
 \end{enumerate}
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
@@ -169,22 +169,22 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \begin{center}\begin{tabular}{l|rrr}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  &$ 0 $  & $1 $  \\ \midrule
-$-1$                 & $0.2$ & $0.1$ & $0.2$ \\ 
+$-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.2$ & $0.1$ & $0.2$ \\ \bottomrule
 \end{tabular}\end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-    \item $\E(X),$  
-    \item $\E(X^{2}),$  
-	\item $D(X),$  
-    \item $\E(Y),$  
-    \item $\E(Y^{2}),$  
-    \item $D(Y),$  
-    \item $\E(XY),$  
-	\item $\Cov(X,Y)$  
-    \item $\Corr(X,Y)$  
-    \item Являются ли случайные величины $X$ и $Y$ некоррелированными?  
+    \item $\E(X),$
+    \item $\E(X^{2}),$
+	\item $\Var(X),$
+    \item $\E(Y),$
+    \item $\E(Y^{2}),$
+    \item $\Var(Y),$
+    \item $\E(XY),$
+	\item $\Cov(X,Y)$
+    \item $\Corr(X,Y)$
+    \item Являются ли случайные величины $X$ и $Y$ некоррелированными?
 \end{enumerate}
 
 \item
@@ -197,14 +197,14 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.1$ & $0.3$ & $0.1$ \\ \bottomrule
 \end{tabular}\end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\P(\{X = -1\} | \{Y = 0\})$  
-\item $\P(\{Y = 0\} | \{X = -1\})$  
-\item таблицу условного распределения случайной величины $Y$ при условии $\{X = -1\}$  
-\item условное математическое ожидание случайной величины $Y$ при $\{X = -1\}$  
+\item $\P(\{X = -1\} | \{Y = 0\})$
+\item $\P(\{Y = 0\} | \{X = -1\})$
+\item таблицу условного распределения случайной величины $Y$ при условии $\{X = -1\}$
+\item условное математическое ожидание случайной величины $Y$ при $\{X = -1\}$
 \item условную дисперсию случайной величины $Y$
-при условии $\{X = -1\}$  
+при условии $\{X = -1\}$
 \end{enumerate}
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
@@ -212,145 +212,145 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \begin{center}\begin{tabular}{l|rrr}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
-$-1$                 & $0.2$ & $0.1$ & $0.2$ \\ 
+$-1$                 & $0.2$ & $0.1$ & $0.2$ \\
  $1$                 & $0.2$ & $0.1$ & $0.2$ \\ \bottomrule
 \end{tabular}\end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\P(\{X = 1\} | \{Y = 0\})$  
-\item $\P(\{Y = 0\} | \{X = 1\})$  
-\item таблицу условного распределения случайной величины $Y$ при условии $\{X = 1\}$  
-\item условное математическое ожидание случайной величины $Y$ при $\{X = 1\}$  
+\item $\P(\{X = 1\} | \{Y = 0\})$
+\item $\P(\{Y = 0\} | \{X = 1\})$
+\item таблицу условного распределения случайной величины $Y$ при условии $\{X = 1\}$
+\item условное математическое ожидание случайной величины $Y$ при $\{X = 1\}$
 \item условную дисперсию случайной величины $Y$
-при условии $\{X = 1\}$  
+при условии $\{X = 1\}$
 \end{enumerate}
 
-\item Пусть $\E(X)=1$, $\E(Y)=2$, $D(X) = 3$, $D(Y) = 4$, $\Cov(X,Y) = -1$. Найдите
+\item Пусть $\E(X)=1$, $\E(Y)=2$, $\Var(X) = 3$, $\Var(Y) = 4$, $\Cov(X,Y) = -1$. Найдите
 \begin{enumerate}
-\item $\E(2X + Y - 4)$  
-\item $D(3Y + 3)$  
-\item $D(X - Y)$  
-\item $D(2X - 3Y +1)$  
-\item $\Cov(X+ 2Y + 1,3X - Y -1)$  
-\item $\Corr(X + Y, X - Y)$  
+\item $\E(2X + Y - 4)$
+\item $\Var(3Y + 3)$
+\item $\Var(X - Y)$
+\item $\Var(2X - 3Y +1)$
+\item $\Cov(X+ 2Y + 1,3X - Y -1)$
+\item $\Corr(X + Y, X - Y)$
 \item Ковариационную матрицу случайного вектора $Z = (X\hspace*{0.4cm} Y)$ \end{enumerate}
 
 
-\item Пусть $\E(X)=-1$, $\E(Y)=2$, $D(X) = 1$, $D(Y) = 2$, $\Cov(X,Y) = 1$. Найдите 
+\item Пусть $\E(X)=-1$, $\E(Y)=2$, $\Var(X) = 1$, $\Var(Y) = 2$, $\Cov(X,Y) = 1$. Найдите
 \begin{enumerate}
-\item $\E(2X + Y - 4)$  
-\item $D(2Y + 3)$  
-\item $D(X - Y)$  
-\item $D(2X - 3Y +1)$  
-\item $\Cov(3X+ Y + 1,X - 2Y -1)$  
-\item $\Corr(X + Y, X - Y)$  
-\item Ковариационную матрицу случайного вектора $Z = (X\hspace*{0.4cm}Y)$  
+\item $\E(2X + Y - 4)$
+\item $\Var(2Y + 3)$
+\item $\Var(X - Y)$
+\item $\Var(2X - 3Y +1)$
+\item $\Cov(3X+ Y + 1,X - 2Y -1)$
+\item $\Corr(X + Y, X - Y)$
+\item Ковариационную матрицу случайного вектора $Z = (X\hspace*{0.4cm}Y)$
 \end{enumerate}
 
-\item Пусть случайная величина $X$ имеет стандартное нормальное распределение. 
-
-Найдите  
-\begin{enumerate}
-\item $\P(\{0 < X < 1\})$  
-\item $\P(\{X > 2\})$  
-\item $\P(\{0 < 1 - 2X \leq 1\})$  
-\end{enumerate}
-
-\item Пусть случайная величина $X$ имеет стандартное нормальное распределение. 
+\item Пусть случайная величина $X$ имеет стандартное нормальное распределение.
 
 Найдите
 \begin{enumerate}
-\item $\P(\{-1 < X < 1\})$  
-\item $\P(\{X < -2\})$  
-\item $\P(\{-2 < -X + 1 \leq 0\})$  
+\item $\P(\{0 < X < 1\})$
+\item $\P(\{X > 2\})$
+\item $\P(\{0 < 1 - 2X \leq 1\})$
+\end{enumerate}
+
+\item Пусть случайная величина $X$ имеет стандартное нормальное распределение.
+
+Найдите
+\begin{enumerate}
+\item $\P(\{-1 < X < 1\})$
+\item $\P(\{X < -2\})$
+\item $\P(\{-2 < -X + 1 \leq 0\})$
 \end{enumerate}
 
 \item Пусть случайная величина $X \sim \cN(1,4)$. Найдите $\P(\{1<X<4\})$
 
-\item Пусть случайная величина $X \sim \cN(2,4)$. Найдите $\P(\{-2<X<4\})$ 
+\item Пусть случайная величина $X \sim \cN(2,4)$. Найдите $\P(\{-2<X<4\})$
 
-\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $D(X) = 1$, $\E(Y) = 2$, $D(Y) = 6$. Найдите $\P(\{1 < X + 2Y < 7\})$.
+\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 2$, $\Var(Y) = 6$. Найдите $\P(\{1 < X + 2Y < 7\})$.
 
-\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $D(X) = 1$, $\E(Y) = 3$, $D(Y) = 7$. Найдите $\P(\{1 < 3X + Y < 7\})$. 
+\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 3$, $\Var(Y) = 7$. Найдите $\P(\{1 < 3X + Y < 7\})$.
 
-\item Игральная кость подбрасывается $420$ раз. При помощи центральной предельной теоремы приближенно найти вероятность того, что суммарное число очков будет находиться в пределах от $1400$ до $1505$?  
+\item Игральная кость подбрасывается $420$ раз. При помощи центральной предельной теоремы приближенно найти вероятность того, что суммарное число очков будет находиться в пределах от $1400$ до $1505$?
 
 \item При выстреле по мишени стрелок попадает в десятку с вероятностью $0.5$, в девятку – $0.3$, в восьмерку – $0.1$, в семерку – $0.05$, в шестерку – $0.05$.
-Стрелок сделал $100$ выстрелов. При помощи центральной предельной теоремы приближенно найти вероятность того, что он набрал не менее 900 очков? 
+Стрелок сделал $100$ выстрелов. При помощи центральной предельной теоремы приближенно найти вероятность того, что он набрал не менее 900 очков?
 
-\item Предположим, что на станцию скорой помощи поступают вызовы, число которых распределено по закону Пуассона с параметром $\lambda = 73$, и в разные сутки их количество не зависит друг от друга. При помощи центральной предельной теоремы приближенно найти вероятность того, что в течение года (365 дней) общее число вызовов будет в пределах от $26500$ до $26800$. 
+\item Предположим, что на станцию скорой помощи поступают вызовы, число которых распределено по закону Пуассона с параметром $\lambda = 73$, и в разные сутки их количество не зависит друг от друга. При помощи центральной предельной теоремы приближенно найти вероятность того, что в течение года (365 дней) общее число вызовов будет в пределах от $26500$ до $26800$.
 
-\item Число посетителей магазина (в день) имеет распределение Пуассона с математическим ожиданием $289$. При помощи центральной предельной теоремы приближенно найти вероятность того, что за $100$ рабочих дней суммарное число посетителей составит от $28550$ до $29250$ человек. 
+\item Число посетителей магазина (в день) имеет распределение Пуассона с математическим ожиданием $289$. При помощи центральной предельной теоремы приближенно найти вероятность того, что за $100$ рабочих дней суммарное число посетителей составит от $28550$ до $29250$ человек.
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\P(\{X \leq \frac{1}{2}\} \cap\{Y \leq \frac{1}{2}\})$,  
-\item $\P(\{X\leq Y\})$,  
-\item $f_{X}(x)$,  
-\item $f_{Y}(y)$,  
+\item $\P(\{X \leq \frac{1}{2}\} \cap\{Y \leq \frac{1}{2}\})$,
+\item $\P(\{X\leq Y\})$,
+\item $f_{X}(x)$,
+\item $f_{Y}(y)$,
 \item Являются ли случайные величины $X$ и $Y$ независимыми?
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\P(\{X \leq \frac{1}{2}\} \cap \{Y \leq \frac{1}{2}\})$,  
-\item $\P(\{X\leq Y\})$,  
-\item $f_{X}(x)$,  
-\item $f_{Y}(y)$,  
-\item Являются ли случайные величины $X$ и $Y$ независимыми?  
+\item $\P(\{X \leq \frac{1}{2}\} \cap \{Y \leq \frac{1}{2}\})$,
+\item $\P(\{X\leq Y\})$,
+\item $f_{X}(x)$,
+\item $f_{Y}(y)$,
+\item Являются ли случайные величины $X$ и $Y$ независимыми?
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\E(X)$,  
-\item $\E(Y)$,  
-\item $\E(XY)$,  
-\item $\Cov(X,Y)$,  
-\item $\Corr(X,Y)$.  
+\item $\E(X)$,
+\item $\E(Y)$,
+\item $\E(XY)$,
+\item $\Cov(X,Y)$,
+\item $\Corr(X,Y)$.
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $\E(X)$,  
-\item $\E(Y)$,  
-\item $\E(XY)$,  
-\item $\Cov(X,Y)$,  
-\item $\Corr(X,Y)$.  
+\item $\E(X)$,
+\item $\E(Y)$,
+\item $\E(XY)$,
+\item $\Cov(X,Y)$,
+\item $\Corr(X,Y)$.
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} x+y, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $f_{y}(y)$,  
-\item $f_{X|Y}\left(X|\frac{1}{2}\right)$  
-\item $\E\left(X|Y = \frac{1}{2}\right)$  
-\item $D\left(X|Y = \frac{1}{2}\right)$  
+\item $f_{y}(y)$,
+\item $f_{X|Y}\left(X|\frac{1}{2}\right)$
+\item $\E\left(X|Y = \frac{1}{2}\right)$
+\item $D\left(X|Y = \frac{1}{2}\right)$
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
-\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \mbox{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \mbox{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
+\begin{center} $f_{X,Y}(x,y) = \begin{cases} 4xy, & \text{при } (x,y) \in [0;1] \times [0;1] \\ 0 , & \text{при } (x,y) \not\in [0;1] \times [0;1] \end{cases}$  \end{center}
 
-Найдите  
+Найдите
 \begin{enumerate}
-\item $f_{y}(y)$,  
-\item $f_{X|Y}\left(X|\frac{1}{2}\right)$  
-\item $\E\left(X|Y = \frac{1}{2}\right)$  
-\item $D\left(X|Y = \frac{1}{2}\right)$  
+\item $f_{y}(y)$,
+\item $f_{X|Y}\left(X|\frac{1}{2}\right)$
+\item $\E\left(X|Y = \frac{1}{2}\right)$
+\item $D\left(X|Y = \frac{1}{2}\right)$
 \end{enumerate}
 
 \end{enumerate}
@@ -359,211 +359,210 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 \begin{enumerate}
 
-\item  
+\item
 \begin{enumerate}
-\item   $0.5 $  
-\item   $0.3$   
-\item   $0.2$   
-\item   нет   
-\item   $0.3$    
+\item   $0.5 $
+\item   $0.3$
+\item   $0.2$
+\item   нет
+\item   $0.3$
 \item  
 \begin{tabular}{lrr}
 \toprule
 $X$ & $-1$  & $1$   \\ \midrule
 $\P(\cdot)$ & $0.5$ & $0.5$ \\ \bottomrule
-\end{tabular}   
-\item  $F_{X}(x) = \begin{cases} 0, & \mbox{при } x < -1 \\ 0.5 , & \mbox{при } x \in [-1;1) \\ 1, & \mbox{при }  x > 1 \end{cases}$   
+\end{tabular}
+\item  $F_{X}(x) = \begin{cases} 0, & \text{при } x < -1 \\ 0.5 , & \text{при } x \in [-1;1) \\ 1, & \text{при }  x > 1 \end{cases}$
 \end{enumerate}
-\item   
+\item
 \begin{enumerate}
-\item   $0.5$  
-\item   $0.4$   
-\item   $0.2$  
-\item   да    
-\item   $0.6$  
-\item   
+\item   $0.5$
+\item   $0.4$
+\item   $0.2$
+\item   да
+\item   $0.6$
+\item
 \begin{tabular}{lrrr}
 \toprule
 $Y$ & $-1$  & $0$   & $1$   \\ \midrule
 $\P(\cdot)$ & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
-\end{tabular}  
-\item   $F_{Y}(y) = \begin{cases} 0, & \mbox{при } y < -1 \\ 0.4 , & \mbox{при } y \in [-1;0) \\ 0.6, & \mbox{при }  y \in [0;1)\\ 1, & \mbox{при } y > 1 \end{cases}$   
+\end{tabular}
+\item   $F_{Y}(y) = \begin{cases} 0, & \text{при } y < -1 \\ 0.4 , & \text{при } y \in [-1;0) \\ 0.6, & \text{при }  y \in [0;1)\\ 1, & \text{при } y > 1 \end{cases}$
 \end{enumerate}
 
-\item 
+\item
 \begin{enumerate}
-\item   $0$   
-\item   $1$   
-\item  $1$   
-\item   $0$   
-\item   $0.6$   
-\item   $0.6$   
-\item   $0$   
-\item   $0$   
-\item   $0$   
-\item   да, являются некоррелированными, но нельзя утверждать, что являются независимыми  
+\item   $0$
+\item   $1$
+\item  $1$
+\item   $0$
+\item   $0.6$
+\item   $0.6$
+\item   $0$
+\item   $0$
+\item   $0$
+\item   да, являются некоррелированными, но нельзя утверждать, что являются независимыми
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item   $0$   
-\item   $1$    
-\item   $1$   
-\item   $0$   
-\item   $0.8$   
-\item   $0.8$   
-\item   $0$   
-\item   $0$   
-\item   $0$   
-\item   да, являются некоррелированными, но нельзя утверждать, что являются независимыми  
+\item   $0$
+\item   $1$
+\item   $1$
+\item   $0$
+\item   $0.8$
+\item   $0.8$
+\item   $0$
+\item   $0$
+\item   $0$
+\item   да, являются некоррелированными, но нельзя утверждать, что являются независимыми
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item   $0.25$   
-\item   $0.2$   
+\item   $0.25$
+\item   $0.2$
 \item   \begin{tabular}{lrrr}
 \toprule
 $Y$ | $\{X = -1\}$ & $-1$  & $0$   & $1$   \\ \midrule
 $\P(\cdot)$              & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
-\end{tabular}   
-\item   $0$   
-\item   $0.8 $  
+\end{tabular}
+\item   $0$
+\item   $0.8 $
 \end{enumerate}
-\item  
+\item
 \begin{enumerate}
-\item   $0.5$   
-\item   $0.2$   
+\item   $0.5$
+\item   $0.2$
 \item   \begin{tabular}{lrrr}
 \toprule
 $Y$ | $\{X = 1\}$ & $-1$  & $0$   & $1$   \\ \midrule
 $\P(\cdot)$             & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
-\end{tabular}   
-\item   $0$   
-\item   $0.8$   
+\end{tabular}
+\item   $0$
+\item   $0.8$
 \end{enumerate}
 
-\item  
+\item
 \begin{enumerate}
-\item   $0 $  
-\item   $36$   
-\item  $9 $  
-\item   $60 $  
-\item  $-4$   
-\item   $\frac{-1}{3\sqrt{5}}$   
+\item   $0 $
+\item   $36$
+\item  $9 $
+\item   $60 $
+\item  $-4$
+\item   $\frac{-1}{3\sqrt{5}}$
 \item  $\begin{pmatrix}
- 3 & -1 \\ 
+ 3 & -1 \\
 -1 & 4
-\end{pmatrix}$   
+\end{pmatrix}$
 \end{enumerate}
 
-\item   
+\item
 \begin{enumerate}
-\item $-4$   
-\item $8 $  
-\item $1 $  
-\item $10 $  
-\item $-6$   
-\item$ \frac{-1}{\sqrt{5}}$   
+\item $-4$
+\item $8 $
+\item $1 $
+\item $10 $
+\item $-6$
+\item$ \frac{-1}{\sqrt{5}}$
 
 \item $\begin{pmatrix}
- 1 & 1 \\ 
+ 1 & 1 \\
  1 & 2
-\end{pmatrix}$   
+\end{pmatrix}$
 \end{enumerate}
-\item    
+\item
 \begin{enumerate}
-\item $0.3413$   
-\item $0.0228$   
-\item $0.1915$ 
+\item $0.3413$
+\item $0.0228$
+\item $0.1915$
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item $0.6826$   
-\item $0.0228  $ 
-\item $0.4987  $ 
+\item $0.6826$
+\item $0.0228  $
+\item $0.4987  $
 \end{enumerate}
 
-\item $0.4332 $  
-\item $0.1815  $ 
-\item $0.4514 $ 
-\item $0.383  $ 
-\item $0.0558 $   
-\item $0.5517$  
-\item $0.0359 $ 
-\item $0.1586$  
+\item $0.4332 $
+\item $0.1815  $
+\item $0.4514 $
+\item $0.383  $
+\item $0.0558 $
+\item $0.5517$
+\item $0.0359 $
+\item $0.1586$
 
-\item    
+\item
 \begin{enumerate}
 \item $0.125   $
-\item $0.5 $  
-\item $f_{X}(x) = \begin{cases} x+\frac{1}{2}, & \mbox{при } x \in [0;1] \\ 0 , & \mbox{при } x \not\in [0;1] \end{cases}$  
-\item $f_{Y}(y) = \begin{cases} y+\frac{1}{2}, & \mbox{при } y \in [0;1] \\ 0 , & \mbox{при } y \not\in [0;1] \end{cases}$  
-\item нет  
+\item $0.5 $
+\item $f_{X}(x) = \begin{cases} x+\frac{1}{2}, & \text{при } x \in [0;1] \\ 0 , & \text{при } x \not\in [0;1] \end{cases}$
+\item $f_{Y}(y) = \begin{cases} y+\frac{1}{2}, & \text{при } y \in [0;1] \\ 0 , & \text{при } y \not\in [0;1] \end{cases}$
+\item нет
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item $\frac{1}{16}$   
+\item $\frac{1}{16}$
 
-\item $\frac{1}{2}$   
+\item $\frac{1}{2}$
 
-\item$f_{X}(x) = \begin{cases} 2x, & \mbox{при } x \in [0;1] \\ 0 , & \mbox{при } x \not\in [0;1] \end{cases}$  
+\item$f_{X}(x) = \begin{cases} 2x, & \text{при } x \in [0;1] \\ 0 , & \text{при } x \not\in [0;1] \end{cases}$
 
-\item$f_{Y}(y) = \begin{cases} 2y, & \mbox{при } y \in [0;1] \\ 0 , & \mbox{при } y \not\in [0;1] \end{cases}$  
+\item$f_{Y}(y) = \begin{cases} 2y, & \text{при } y \in [0;1] \\ 0 , & \text{при } y \not\in [0;1] \end{cases}$
 
-\item да   
+\item да
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item $\frac{7}{12}$   
+\item $\frac{7}{12}$
 
-\item $\frac{7}{12}$   
+\item $\frac{7}{12}$
 
-\item $\frac{1}{3}$   
+\item $\frac{1}{3}$
 
-\item $-\frac{1}{144}$   
+\item $-\frac{1}{144}$
 
-\item $-\frac{1}{11}$   
+\item $-\frac{1}{11}$
 \end{enumerate}
 
-\item   
+\item
 \begin{enumerate}
-\item $\frac{2}{3}$   
+\item $\frac{2}{3}$
 
-\item $\frac{2}{3}$   
+\item $\frac{2}{3}$
 
-\item $\frac{4}{9}$   
+\item $\frac{4}{9}$
 
-\item 0   
+\item 0
 
-\item 0   
+\item 0
 \end{enumerate}
 
-\item    
+\item
 \begin{enumerate}
-\item $f_{Y}(y) = \begin{cases} y+\frac{1}{2}, & \mbox{при } y \in [0;1] \\ 0 , & \mbox{при } y \not\in [0;1] \end{cases}$  
+\item $f_{Y}(y) = \begin{cases} y+\frac{1}{2}, & \text{при } y \in [0;1] \\ 0 , & \text{при } y \not\in [0;1] \end{cases}$
 
-\item $f_{X|Y}(x|\frac{1}{2}) = \begin{cases} x+\frac{1}{2}, & \mbox{при } x \in [0;1] \\ 0 , & \mbox{при } x \not\in [0;1] \end{cases}$  
+\item $f_{X|Y}(x|\frac{1}{2}) = \begin{cases} x+\frac{1}{2}, & \text{при } x \in [0;1] \\ 0 , & \text{при } x \not\in [0;1] \end{cases}$
 
-\item $\frac{7}{12}$  
+\item $\frac{7}{12}$
 
-\item $\frac{11}{144}$   
+\item $\frac{11}{144}$
 \end{enumerate}
 
-\item  
+\item
 \begin{enumerate}
-\item $f_{Y}(y) = \begin{cases} 2y, & \mbox{при } y \in [0;1] \\ 0 , & \mbox{при } y \not\in [0;1] \end{cases}$  
+\item $f_{Y}(y) = \begin{cases} 2y, & \text{при } y \in [0;1] \\ 0 , & \text{при } y \not\in [0;1] \end{cases}$
 
-\item $f_{X|Y}(x|\frac{1}{2}) = \begin{cases} 2x, & \mbox{при } x \in [0;1] \\ 0 , & \mbox{при } x \not\in [0;1] \end{cases}$   
+\item $f_{X|Y}(x|\frac{1}{2}) = \begin{cases} 2x, & \text{при } x \in [0;1] \\ 0 , & \text{при } x \not\in [0;1] \end{cases}$
 
-\item $\frac{2}{3}$   
+\item $\frac{2}{3}$
 
-\item $\frac{1}{18}$  
+\item $\frac{1}{18}$
 \end{enumerate}
 \end{enumerate}
 
 \end{document}
- 
