--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -157,7 +157,9 @@
 \item Андрей Зубанов, решения (экзамен 26.03.2012, \ldots)
 \item Кирилл Пономарёв, решения (контрольная 1, 2014)
 \item Александр Левкун, решения (контрольная 1, 2014)
-\item Оля Гнилова, решения (кр 3 2011, 2014, 2015, 2016)
+\item Оля Гнилова, решения (кр 3 2011, 2014, 2015, 2016, \ldots)
+\item Настя Жаркова
+\item Гарик Варданян
 \end{enumerate}
 
 
@@ -559,11 +561,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.3,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.8)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.2,6.7)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.7)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.2)$
-\item $\E(X/(X+9Y))$
+\item $\P(X+Y>5.6)$
+\item $\E(X/(X+3Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -838,8 +840,8 @@ $\P(X=x)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
-% latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Fri Nov  3 23:50:31 2017
+% latex table generated in R 3.4.0 by xtable 1.8-2 package
+% Tue Nov 14 09:38:58 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
