--- a/materials/min_kr2/main.tex
+++ b/materials/min_kr2/main.tex
@@ -28,7 +28,7 @@
 \pagestyle{fancy}
 \lhead{Теория вероятностей}
 \chead{}
-\rhead{Задачный минимум к контрольной \textnumero 2 по ТВ и МС}
+\rhead{Минимум к контрольной \textnumero 2 по ТВ и МС}
 \lfoot{}
 \cfoot{}
 \rfoot{\thepage/\pageref{LastPage}}
@@ -94,6 +94,34 @@
 
 \begin{document}
 
+\section{Теоретический минимум}
+
+\begin{enumerate}
+\item Сформулируйте определение независимости событий, формулу полной вероятности.
+\item Приведите определение условной вероятности случайного события, формулу Байеса.
+\item Сформулируйте определение и свойства функции распределения случайной величины.
+\item Сформулируйте определение и свойства функции плотности случайной величины.
+\item Сформулируйте определение и свойства математического ожидания для абсолютно непрерывной случайной величины.
+\item Сформулируйте определение и свойства математического ожидания для дискретной случайной величины.
+\item Сформулируйте определение и свойства дисперсии случайной величины.
+\item Сформулируйте определения следующих законов распределений: биномиального, Пуассона, шеометрического, равномерного, экспоненциального, нормального. Укажите математическое ожидание и дисперсию.
+\item Сформулируйте определение функции совместного распределения двух случайных величин, независимости случайных величин. Укажите, как связаны совместное распределение и частные распределения компонент случайного вектора.
+\item	Сформулируйте определение и свойства совместной функции плотности двух случайных величин, сформулируйте определение независимости случайных величин.
+\item Сформулируйте определение и свойства ковариации случайных величин.
+\item Сформулируйте определение и свойства корреляции случайных величин.
+\item Сформулируйте определение и свойства условной функции плотности.
+\item Сформулируйте определение  условного математического ожидания $\E(Y|X=x)$ для совместного дискретного и совместного абсолютно непрерывного распределений.
+\item Сформулируйте определение математического ожидания и ковариационной матрицы случайного вектора и их свойства.
+\item Сформулируйте неравенство Чебышёва и неравенство Маркова.
+\item Сформулируйте закон больших чисел в слабой форме.
+\item Сформулируйте центральную предельную теорему.
+\item Сформулируйте теорему Муавра—Лапласа.
+\item Сформулируйте определение сходимости по вероятности для последовательности случайных величин.
+
+\end{enumerate}
+
+
+\section{Задачный минимум}
 
 \begin{enumerate}
 
@@ -336,10 +364,10 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $f_{y}(y)$,
-\item $f_{X|Y}\left(X|\frac{1}{2}\right)$
+\item $f_{Y}(y)$,
+\item $f_{X|Y}\left(x|\frac{1}{2}\right)$
 \item $\E\left(X|Y = \frac{1}{2}\right)$
-\item $D\left(X|Y = \frac{1}{2}\right)$
+\item $\Var\left(X|Y = \frac{1}{2}\right)$
 \end{enumerate}
 
 \item Пусть плотность распределения случайного вектора $(X,Y)$ имеет вид
@@ -347,10 +375,10 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $f_{y}(y)$,
-\item $f_{X|Y}\left(X|\frac{1}{2}\right)$
+\item $f_{Y}(y)$,
+\item $f_{X|Y}\left(x|\frac{1}{2}\right)$
 \item $\E\left(X|Y = \frac{1}{2}\right)$
-\item $D\left(X|Y = \frac{1}{2}\right)$
+\item $\Var\left(X|Y = \frac{1}{2}\right)$
 \end{enumerate}
 
 \end{enumerate}
@@ -366,7 +394,7 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \item   $0.2$
 \item   нет
 \item   $0.3$
-\item  
+\item
 \begin{tabular}{lrr}
 \toprule
 $X$ & $-1$  & $1$   \\ \midrule
