--- a/title_bor_utf8.tex
+++ b/title_bor_utf8.tex
@@ -100,6 +100,8 @@ completemulti % добавлять "нет правильного ответа" 
 % 4. Не сокращайте .1 вместо 0.1
 % 5. Повторяющееся значение повторяйте, а не говорите "то же"
 
+\usepackage{minted} % вставка кода, нужен питон :)
+
 
 % DEFS
 \def \mbf{\mathbf}
