F(x) inequality in minimum kr 2

--- a/materials/min_kr2/main.tex
+++ b/materials/min_kr2/main.tex
@@ -400,7 +400,11 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 $X$ & $-1$  & $1$   \\ \midrule
 $\P(\cdot)$ & $0.5$ & $0.5$ \\ \bottomrule
 \end{tabular}
-\item  $F_{X}(x) = \begin{cases} 0, & \text{при } x < -1 \\ 0.5 , & \text{при } x \in [-1;1) \\ 1, & \text{при }  x > 1 \end{cases}$
+\item  $F_{X}(x) = \begin{cases}
+0, & \text{при } x < -1 \\
+0.5 , & \text{при } x \in [-1;1) \\
+1, & \text{при }  x \geq 1
+\end{cases}$
 \end{enumerate}
 \item
 \begin{enumerate}
@@ -415,7 +419,12 @@ $\P(\cdot)$ & $0.5$ & $0.5$ \\ \bottomrule
 $Y$ & $-1$  & $0$   & $1$   \\ \midrule
 $\P(\cdot)$ & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
 \end{tabular}
-\item   $F_{Y}(y) = \begin{cases} 0, & \text{при } y < -1 \\ 0.4 , & \text{при } y \in [-1;0) \\ 0.6, & \text{при }  y \in [0;1)\\ 1, & \text{при } y > 1 \end{cases}$
+\item   $F_{Y}(y) = \begin{cases}
+0, & \text{при } y < -1 \\
+0.4 , & \text{при } y \in [-1;0) \\
+0.6, & \text{при }  y \in [0;1)\\
+1, & \text{при } y \geq 1
+\end{cases}$
 \end{enumerate}
 
 \item
