--- a/materials/min_kr2/main.tex
+++ b/materials/min_kr2/main.tex
@@ -127,7 +127,7 @@
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
-\begin{center}\begin{tabular}{r|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -137,9 +137,9 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{X = -1\})$
-\item $\P(\{Y = -1\})$
-\item $\P(\{X = -1\}\cap\{Y = -1\})$
+\item $\P(X = -1)$
+\item $\P(Y = -1)$
+\item $\P(X = -1 \cap Y = -1 )$
 \item Являются ли случайные величины $X$ и $Y$ независимыми?
 \item $F_{X,Y}(-1,0)$
 \item Таблицу распределения случайной величины $X$
@@ -150,7 +150,7 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
 
-\begin{center}\begin{tabular}{l|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$  & $1$   \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -160,10 +160,10 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 Найдите
 \begin{enumerate}
 \item $\P(X = 1)$,
-\item $\P(\{Y = 1\})$,
-\item $\P(\{X = 1\}\cap\{Y = 1\})$
+\item $\P(Y = 1)$,
+\item $\P(X = 1 \cap Y = 1)$
 \item Являются ли случайные величины $X$ и $Y$ независимыми?
-\item $F_{X,Y}$(1,0)
+\item $F_{X,Y}(1,0)$
 \item Таблицу распределения случайной величины $Y$
 \item Функцию $F_{Y}(y)$ распределения случайной величины $Y$
 \item Постройте график функции $F_{Y}(y)$ распределения случайной величины $Y$.
@@ -171,7 +171,7 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
-\begin{center}\begin{tabular}{l|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -194,7 +194,7 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
-\begin{center}\begin{tabular}{l|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  &$ 0 $  & $1 $  \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -218,7 +218,7 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 \item
 Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
-\begin{center}\begin{tabular}{l|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$\textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -227,17 +227,17 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{X = -1\} | \{Y = 0\})$
-\item $\P(\{Y = 0\} | \{X = -1\})$
-\item таблицу условного распределения случайной величины $Y$ при условии $\{X = -1\}$
-\item условное математическое ожидание случайной величины $Y$ при $\{X = -1\}$
+\item $\P(X = -1 | Y = 0)$
+\item $\P(Y = 0 | X = -1)$
+\item таблицу условного распределения случайной величины $Y$ при условии $X = -1$
+\item условное математическое ожидание случайной величины $Y$ при $X = -1$
 \item условную дисперсию случайной величины $Y$
-при условии $\{X = -1\}$
+при условии $X = -1$
 \end{enumerate}
 
 \item Пусть задана таблица совместного распределения случайных величин $X$ и $Y$.
 
-\begin{center}\begin{tabular}{l|rrr}
+\begin{center}\begin{tabular}{lccc}
 \toprule
  $X$ \textbackslash $Y$    & $-1$  & $0$   & $1$   \\ \midrule
 $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
@@ -246,12 +246,12 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{X = 1\} | \{Y = 0\})$
-\item $\P(\{Y = 0\} | \{X = 1\})$
-\item таблицу условного распределения случайной величины $Y$ при условии $\{X = 1\}$
-\item условное математическое ожидание случайной величины $Y$ при $\{X = 1\}$
+\item $\P(X = 1 | Y = 0)$
+\item $\P(Y = 0 | X = 1)$
+\item таблицу условного распределения случайной величины $Y$ при условии $X = 1$
+\item условное математическое ожидание случайной величины $Y$ при $X = 1$
 \item условную дисперсию случайной величины $Y$
-при условии $\{X = 1\}$
+при условии $X = 1$
 \end{enumerate}
 
 \item Пусть $\E(X)=1$, $\E(Y)=2$, $\Var(X) = 3$, $\Var(Y) = 4$, $\Cov(X,Y) = -1$. Найдите
@@ -280,27 +280,27 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{0 < X < 1\})$
-\item $\P(\{X > 2\})$
-\item $\P(\{0 < 1 - 2X \leq 1\})$
+\item $\P(0 < X < 1)$
+\item $\P(X > 2)$
+\item $\P(0 < 1 - 2X \leq 1)$
 \end{enumerate}
 
 \item Пусть случайная величина $X$ имеет стандартное нормальное распределение.
 
 Найдите
 \begin{enumerate}
-\item $\P(\{-1 < X < 1\})$
-\item $\P(\{X < -2\})$
-\item $\P(\{-2 < -X + 1 \leq 0\})$
+\item $\P(-1 < X < 1)$
+\item $\P(X < -2)$
+\item $\P(-2 < -X + 1 \leq 0)$
 \end{enumerate}
 
-\item Пусть случайная величина $X \sim \cN(1,4)$. Найдите $\P(\{1<X<4\})$
+\item Пусть случайная величина $X \sim \cN(1,4)$. Найдите $\P(1<X<4)$
 
-\item Пусть случайная величина $X \sim \cN(2,4)$. Найдите $\P(\{-2<X<4\})$
+\item Пусть случайная величина $X \sim \cN(2,4)$. Найдите $\P(-2<X<4)$
 
-\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 2$, $\Var(Y) = 6$. Найдите $\P(\{1 < X + 2Y < 7\})$.
+\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 2$, $\Var(Y) = 6$. Найдите $\P(1 < X + 2Y < 7)$.
 
-\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 3$, $\Var(Y) = 7$. Найдите $\P(\{1 < 3X + Y < 7\})$.
+\item Случайные величины $X$ и $Y$ независимы и  имеют нормальное распределение, $\E(X) = 0 $, $\Var(X) = 1$, $\E(Y) = 3$, $\Var(Y) = 7$. Найдите $\P(1 < 3X + Y < 7)$.
 
 \item Игральная кость подбрасывается $420$ раз. При помощи центральной предельной теоремы приближенно найти вероятность того, что суммарное число очков будет находиться в пределах от $1400$ до $1505$?
 
@@ -316,8 +316,8 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{X \leq \frac{1}{2}\} \cap\{Y \leq \frac{1}{2}\})$,
-\item $\P(\{X\leq Y\})$,
+\item $\P(X \leq \frac{1}{2} \cap Y \leq \frac{1}{2})$,
+\item $\P(X\leq Y)$,
 \item $f_{X}(x)$,
 \item $f_{Y}(y)$,
 \item Являются ли случайные величины $X$ и $Y$ независимыми?
@@ -328,8 +328,8 @@ $-1$                 & $0.2$ & $0.1$ & $0.2$ \\
 
 Найдите
 \begin{enumerate}
-\item $\P(\{X \leq \frac{1}{2}\} \cap \{Y \leq \frac{1}{2}\})$,
-\item $\P(\{X\leq Y\})$,
+\item $\P(X \leq \frac{1}{2} \cap Y \leq \frac{1}{2})$,
+\item $\P(X\leq Y)$,
 \item $f_{X}(x)$,
 \item $f_{Y}(y)$,
 \item Являются ли случайные величины $X$ и $Y$ независимыми?
@@ -525,11 +525,11 @@ $\P(\cdot)$             & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
 \item $0.4332 $
 \item $0.8185  $
 \item $0.4514 $
-\item $0.383  $
-\item $0.0558 $
-\item $0.5517$
-\item $0.0359 $
-\item $0.1586$
+\item $0.5328  $
+\item $0.8185 $
+\item $0.9115$
+\item $0.637 $
+\item $0.9596$
 
 \item
 \begin{enumerate}
