--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -26,7 +26,7 @@
 
 \unitlength=0.6mm
 
-\title{Подборка экзаменов по теории вероятностей. \\Факультет экономики, НИУ-ВШЭ}
+\title{Подборка экзаменов по теории вероятностей. \\Факультет экономики, НИУ ВШЭ}
 \date{\today}
 \author{Коллектив кафедры \\
 математической экономики и эконометрики,\\
