approx sols in min kr2

--- a/materials/min_kr2/main.tex
+++ b/materials/min_kr2/main.tex
@@ -526,10 +526,10 @@ $\P(\cdot)$             & $0.4$ & $0.2$ & $0.4$ \\ \bottomrule
 \item $0.8185  $
 \item $0.4514 $
 \item $0.5328  $
-\item $0.8185 $
-\item $0.9115$
-\item $0.637 $
-\item $0.9596$
+\item $\approx 0.8185 $
+\item $\approx 0.9115$
+\item $\approx 0.6422 $
+\item $\approx 0.9606$
 
 \item
 \begin{enumerate}
