--- a/materials/min_kr3/main.tex
+++ b/materials/min_kr3/main.tex
@@ -98,11 +98,48 @@
 
 \begin{document}
 
+\section{Теоретический минимум}
+
+\begin{enumerate}
+  \item Дайте определение нормально распределённой случайной величины. Укажите диапазон возможных значений, функцию плотности, ожидание, дисперсию. Нарисуйте функцию плотности.
+  \item Дайте определение хи-квадрат распределения. Укажите диапазон возможных значений, выражение через нормальные распределения, математическое ожидание. Нарисуйте функцию плотности при разных степенях свободы.
+  \item Дайте определение распределения Стьюдента. Укажите диапазон возможных значений, выражение через нормальные распределения. Нарисуйте функцию плотности распределения Стьюдента при разных степенях свободы на фоне нормальной стандартной функции плотности.
+  \item Дайте определение распределения Фишера. Укажите диапазон возможных значений, выражение через нормальные распределенеия. Нарисуйте возможную функцию плотности.
+\end{enumerate}
+
+Для следующего блока вопросов предполагается, что 
+имеется случайная выборка $X_1$, $X_2$, \ldots, $X_n$ из распределения 
+с функцией плотности $f(x, \theta)$, зависящей от от параметра $\theta$. Дайте определение каждого понятия из списка или сформулируйте соответствующую теорему:
+
+\begin{enumerate}[resume]
+  \item Выборочное среднее и выборочная дисперсия;
+  \item Формула несмещённой оценки дисперсии;
+  \item Выборочный начальный момент порядка $k$;
+  \item Выборочный центральный момент порядка $k$;
+  \item Выборочная функция распределения;
+  \item Несмещённая оценка $\hat \theta$ параметра $\theta$;
+  \item Состоятельная последовательность оценок $\hat \theta_n$;
+  \item Эффективность оценки $\hat \theta$ среди множества оценок $\hat \Theta$;
+  \item Неравенство Крамера-Рао для несмещённых оценок;
+  \item Функция правдоподобия и логарифмическая функция правдоподобия;
+  \item Информация Фишера о параметре $\theta$, содержащаяся в одном наблюдении;
+  \item Оценка метода моментов параметра $\theta$ при использовании первого момента, если $\E(X_i)=g(\theta)$ и существует обратная функция $g^{-1}$;
+  \item Оценка метода максимального правдоподобия параметра $\theta$;
+\end{enumerate}
+
+Для следующего блока вопросов предполагается, что величины $X_1$, $X_2$, \ldots, $X_n$ независимы и нормальны $\cN(\mu;\sigma^2)$.
+
+\begin{enumerate}[resume]
+  \item Укажите закон распределения выборочного среднего, величины $\frac{\bar X - \mu}{\sigma/\sqrt{n}}$, величины $\frac{\bar X - \mu}{\hat\sigma/\sqrt{n}}$, величины $\frac{\hat\sigma^2(n-1)}{\sigma^2}$;
+  \item Укажите формулу доверительного интервала с уровнем доверия $(1-\alpha)$ для $\mu$ при известной дисперсии, для $\mu$ при неизвестной дисперсии, для $\sigma^2$;
+\end{enumerate}
+
+\newpage
 \section{Задачный минимум}
 
 \begin{enumerate}
 
-\item Рост в сантиметрах (случайная величина $X$) и вес в килограммах (случайная величина $Y$) взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E[Z] = (175, 74)$ и ковариационной матрицей
+\item Рост в сантиметрах (случайная величина $X$) и вес в килограммах (случайная величина $Y$) взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E(Z) = (175, 74)$ и ковариационной матрицей
 
 \[
 \Var(Z) = 
@@ -120,7 +157,7 @@
 \item Найдите вероятность того, что случайно выбранный мужчина страдает избыточным весом.
 \end{enumerate}
 
-\item Рост в сантиметрах, случайная величина $X$, и вес в килограммах, случайная величина $Y$, взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E[Z] = (175, 74)$ и ковариационной матрицей
+\item Рост в сантиметрах, случайная величина $X$, и вес в килограммах, случайная величина $Y$, взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E(Z) = (175, 74)$ и ковариационной матрицей
 
 \[
 \Var(Z) = 
@@ -188,7 +225,7 @@ f(x,\theta) = \begin{cases}
 
 \begin{enumerate}
 \item Является ли оценка $\hat{\theta} = \bar{X}$ несмещенной оценкой неизвестного параметра $\theta$?
-\item Подберите константу $c$ так, чтобы оценка $\tilde{\theta} = cX$ оказалась несмещенной оценкой неизвестного параметра $\theta$. 
+\item Подберите константу $c$ так, чтобы оценка $\tilde{\theta} = c\bar{X}$ оказалась несмещенной оценкой неизвестного параметра $\theta$. 
 \end{enumerate}
 
 \item Пусть $X = (X_1,X_2,X_3)$ — случайная выборка из распределения Бернулли с неизвестным параметром $p \in (0,1)$. Какие из следующих ниже оценкой являются несмещенными? Среди перечисленных ниже оценок найдите наиболее эффективную оценку:
@@ -294,26 +331,65 @@ f(x,\theta) =
 Ответы:
 
 \begin{enumerate}
+\item 
+\begin{enumerate}
+\item $\approx 0.15$
+\item $U \sim \cN(101,29)$, $f(u) = \frac{1}{\sqrt{2\pi\cdot 29}}e^{-\frac{1}{2}\frac{(u-101)^2}{29}}$
+\item $\approx 0.02$
+\end{enumerate}
+\item 
+\begin{enumerate}
+\item $71.14$
+\item $f(y|x=170) = \frac{1}{\sqrt{2\pi\cdot20}}e^{-\frac{1}{2}\frac{(y-71.14)^2}{20}}$
+\item $\approx 0$
+\end{enumerate}
 \item
-\item 
-\item 
+\begin{enumerate}
+\item $0.25$
+\item $0.6875$
+\item $0.91(6)$
+\item $0.75$
+\item $-0.28125$
+\end{enumerate}
 \item
+\begin{enumerate}
+\item $-1, 0, 1, 1$
+\item $-1$
+\item $1$
+\item $f(x) = \begin{cases}
+0, & x < -1 \\
+0.25, & -1 \leq x < 0 \\
+0.5, & 0 \leq x < 1 \\
+1, & x \geq 1
+\end{cases}$
+\end{enumerate}
 \item 
-
-\item 
-\item
-\item 
-\item 
-\item
-
-\item 
-\item 
-\item
-\item 
-\item 
-
+\begin{enumerate}
+\item $\theta$
+\item да
 \end{enumerate}
 
+\item 
+\begin{enumerate}
+\item нет, оценка смещена
+\item $c = 2$ 	
+\end{enumerate}
+\item 
+\begin{enumerate}
+\item все оценки несмещенные
+\item $\hat{p}_3$ наиболее эффективная
+\end{enumerate}	
+\item да
+\item да
+\item $\hat{\theta}_{MM} = \sqrt{\frac{\sum_{i=1}^n(X-X_{i})^2\cdot20}{n}}$
+
+\item $\hat{\theta}_{MM} = \frac{1}{5}\left(6 - \frac{1}{n}\sum_{i=1}^n X_i^2 \right)$, $\hat{\theta}_{MM} = 0.68$
+\item $\hat{\theta}_{ML} = \frac{\sum_{i=1}^n x_i^2}{n}$
+\item $\hat{p}_{ML} = \frac{\sum_{i=1}^n x_i}{n}$
+\item да
+\item $n_1 \approx 260$, $n_2 \approx 232$, $n_3 \approx 658$
+
+\end{enumerate}
 
 
 \end{document}
