--- a/materials/min_kr3/main.tex
+++ b/materials/min_kr3/main.tex
@@ -120,7 +120,7 @@
   \item Несмещённая оценка $\hat \theta$ параметра $\theta$;
   \item Состоятельная последовательность оценок $\hat \theta_n$;
   \item Эффективность оценки $\hat \theta$ среди множества оценок $\hat \Theta$;
-  \item Неравенство Крамера-Рао для несмещённых оценок;
+  \item Неравенство Крамера–Рао для несмещённых оценок;
   \item Функция правдоподобия и логарифмическая функция правдоподобия;
   \item Информация Фишера о параметре $\theta$, содержащаяся в одном наблюдении;
   \item Оценка метода моментов параметра $\theta$ при использовании первого момента, если $\E(X_i)=g(\theta)$ и существует обратная функция $g^{-1}$;
