--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -24,6 +24,13 @@
 \setlist[enumerate, 2]{label=\asbuk*),ref=\asbuk*}
 
 
+\newenvironment{problem}{}{}
+% тут перещёлкиваем комментарий, чтобы убрать или показать решения:
+\newenvironment{sol}{}{} % with solutions
+% \excludecomment{sol} % without solutions
+
+
+
 \unitlength=0.6mm
 
 \title{Подборка экзаменов по теории вероятностей. \\Факультет экономики, НИУ ВШЭ}
