--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -24,6 +24,10 @@
 \setlist[enumerate, 2]{label=\asbuk*),ref=\asbuk*}
 
 
+\DeclareMathOperator{\Lin}{\mathrm{Lin}}
+\DeclareMathOperator{\Linp}{\Lin^{\perp}}
+
+
 \newenvironment{problem}{}{}
 % тут перещёлкиваем комментарий, чтобы убрать или показать решения:
 \newenvironment{sol}{}{} % with solutions
