kr3 2018 task numbers, significance level

--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -95,7 +95,7 @@
 
 \section{Описание}
 
-Свежую версию можно скачать с блога \url{http://pokrovka11.wordpress.com/} или с github репозитория \url{http://bdemeshev.github.io/pr201/}.
+Свежую версию можно скачать с блога \url{http://pokrovka11.wordpress.com/} или с github репозитория \url{https://github.com/bdemeshev/probability_hse_exams}.
 
 
 Уникальное предложение для студентов факультета экономики ГУ-ВШЭ:
