--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -117,14 +117,14 @@
 
 \section{Доброе напутствие пишущим эту подборку :)}
 
-Здесь перечислены стилевые особенности коллекции, а узнать технические подробности по теху можно, например, \href{http://www.ccas.ru/voron/download/voron05latex.pdf}{в учебнике} К.В. Воронцова.
+Здесь перечислены стилевые особенности коллекции и самые популярные ошибки. Узнать технические подробности по теху можно, например, \href{http://www.ccas.ru/voron/download/voron05latex.pdf}{в учебнике} К.В. Воронцова.
 
 \begin{enumerate}
 
-\item Дробную часть числа отделяй от целой точкой: $3.14$ — хорошо, $3{,}14$ — плохо.
+\item Дробную часть числа отделяй от целой точкой: $3.14$ — хорошо, $3{,}14$ — плохо. Это нарушает русскую традицию, но облегчает копирование-вставку в любой программный пакет.
 \item Существует длинное тире, —, которое отличается от просто дефиса - и нужно, чтобы разделять части предложения. \href{https://ru.wikihow.com/напечатать-тире}{Инструкция в картинках по набору тире :)}
 \item Выключные формулы следует окружать \verb|\[|\ldots\verb|\]|. Никаких \$\$\ldots\$\$!
-\item Про остальные окружения: для системы уравнений подойдёт cases, для формул на несколько строк – multline*, для нумерации – enumerate.
+\item Про остальные окружения: для системы уравнений подойдёт \verb|cases|, для формул на несколько строк – \verb|multline*|, для нумерации – \verb|enumerate|.
 \item Русский текст внутри формулы нужно писать в \verb|\text{|\ldots\}.
 \item Для многоточий существует команда \verb|\ldots|.
 \item В преамбуле определены сокращения! Самые популярные: \verb|\P, \E, \Var, \Cov, \Corr, \cN|.
