remove problem 10, small mistakes

--- a/materials/min_kr4/main.tex
+++ b/materials/min_kr4/main.tex
@@ -175,18 +175,21 @@ f(x,\lambda)=
 
 С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\lambda$.
 
-\item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из равномерного распределения на отрезке $[0; \theta]$, где  $\theta > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.57$. 
+% \item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из равномерного распределения на отрезке $[0; \theta]$, где  $\theta > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.57$. 
 
-С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\theta$.
+% С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\theta$.
+% тут брутальный дельта-метод :) это не минимум :)
+
 
 \item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с неизвестным математическим ожиданием $\mu$ и известной дисперсией $\sigma^2 = 4$. Объем выборки $n = 16$. Для тестирования основной гипотезы $H_{0}:\mu = 0$ против
 альтернативной гипотезы $H_{1}:\mu = 2$ вы используете критерий: если $\bar{X} \leq 1$, то вы принимаете гипотезу $H_{0}$ , в противном случае вы отвергаете гипотезу $H_{0}$ в пользу гипотезы $H_{1}$. Найдите
 
-\hspace*{0.6cm}(a) вероятность ошибки 1-го рода, 
+\begin{enumerate}
+   \item  вероятность ошибки 1-го рода;
+   \item вероятность ошибки 2-го рода;
+   \item мощность критерия;
+\end{enumerate}
 
-\hspace*{0.6cm}(b) вероятность ошибки 2-го рода,
-
-\hspace*{0.6cm}(c) мощность критерия.
 
 \item На основе случайной выборки, содержащей одно наблюдение $X_{1}$, тестируется гипотеза $H_{0} : X_{1} \sim U[-0.7;0.3]$ против альтернативной гипотезы $H_{1}: X_{1} \sim U[-0.3;0.7]$. Рассматривается критерий вида: если $X_{1} > c$ , то гипотеза $H_{0}$ отвергается в пользу гипотезы $H_{1}$. Выберите константу $c$ так, чтобы уровень значимости этого критерия составлял 0.1.
 
